--- a/Login/Login/TiendaJuego.csproj
+++ b/Login/Login/TiendaJuego.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AltaJuego.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AltaJuego.Designer.cs">
+      <DependentUpon>AltaJuego.cs</DependentUpon>
+    </Compile>
     <Compile Include="Inicio.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,9 @@
     <Compile Include="VisorAdmin.Designer.cs">
       <DependentUpon>VisorAdmin.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AltaJuego.resx">
+      <DependentUpon>AltaJuego.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Inicio.resx">
       <DependentUpon>Inicio.cs</DependentUpon>
     </EmbeddedResource>
