--- a/Login/Login/TiendaJuego.csproj
+++ b/Login/Login/TiendaJuego.csproj
@@ -46,11 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ABMLUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABMLUsuario.Designer.cs">
+      <DependentUpon>ABMLUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="AltaJuego.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AltaJuego.Designer.cs">
       <DependentUpon>AltaJuego.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BajaUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BajaUsuario.Designer.cs">
+      <DependentUpon>BajaUsuario.cs</DependentUpon>
     </Compile>
     <Compile Include="EliminarJuego.cs">
       <SubType>Form</SubType>
@@ -76,6 +88,12 @@
     <Compile Include="ListadoJuegos.Designer.cs">
       <DependentUpon>ListadoJuegos.cs</DependentUpon>
     </Compile>
+    <Compile Include="ListadoUsuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListadoUsuarios.Designer.cs">
+      <DependentUpon>ListadoUsuarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Lista_DesarrolladorasJUEGOS.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +105,12 @@
     </Compile>
     <Compile Include="ModificarJuego.Designer.cs">
       <DependentUpon>ModificarJuego.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModificarUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificarUsuario.Designer.cs">
+      <DependentUpon>ModificarUsuario.cs</DependentUpon>
     </Compile>
     <Compile Include="VisorUsuario.cs">
       <SubType>Form</SubType>
@@ -114,8 +138,14 @@
     <Compile Include="VisorAdmin.Designer.cs">
       <DependentUpon>VisorAdmin.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ABMLUsuario.resx">
+      <DependentUpon>ABMLUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AltaJuego.resx">
       <DependentUpon>AltaJuego.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="BajaUsuario.resx">
+      <DependentUpon>BajaUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EliminarJuego.resx">
       <DependentUpon>EliminarJuego.cs</DependentUpon>
@@ -129,11 +159,17 @@
     <EmbeddedResource Include="ListadoJuegos.resx">
       <DependentUpon>ListadoJuegos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ListadoUsuarios.resx">
+      <DependentUpon>ListadoUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Lista_DesarrolladorasJUEGOS.resx">
       <DependentUpon>Lista_DesarrolladorasJUEGOS.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ModificarJuego.resx">
       <DependentUpon>ModificarJuego.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModificarUsuario.resx">
+      <DependentUpon>ModificarUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VisorUsuario.resx">
       <DependentUpon>VisorUsuario.cs</DependentUpon>
