--- a/Login/Login/TiendaJuego.csproj
+++ b/Login/Login/TiendaJuego.csproj
@@ -118,6 +118,12 @@
     <Compile Include="Lista_DesarrolladorasJUEGOS.Designer.cs">
       <DependentUpon>Lista_DesarrolladorasJUEGOS.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModificarDatosPersonales.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificarDatosPersonales.Designer.cs">
+      <DependentUpon>ModificarDatosPersonales.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModificarJuego.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -191,6 +197,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Lista_DesarrolladorasJUEGOS.resx">
       <DependentUpon>Lista_DesarrolladorasJUEGOS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModificarDatosPersonales.resx">
+      <DependentUpon>ModificarDatosPersonales.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ModificarJuego.resx">
       <DependentUpon>ModificarJuego.cs</DependentUpon>
