--- a/Login/Login/TiendaJuego.csproj
+++ b/Login/Login/TiendaJuego.csproj
@@ -142,6 +142,12 @@
     <Compile Include="ModificarUsuario.Designer.cs">
       <DependentUpon>ModificarUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ventas\Ventas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ventas\Ventas.Designer.cs">
+      <DependentUpon>Ventas.cs</DependentUpon>
+    </Compile>
     <Compile Include="VisorUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -203,9 +209,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Lista_DesarrolladorasJUEGOS.resx">
       <DependentUpon>Lista_DesarrolladorasJUEGOS.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ModificarDatosPersonales.resx">
-      <DependentUpon>ModificarDatosPersonales.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ModificarJuego.resx">
       <DependentUpon>ModificarJuego.cs</DependentUpon>
