--- a/Login/Login/TiendaJuego.csproj
+++ b/Login/Login/TiendaJuego.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="VisorAdmin.resx">
       <DependentUpon>VisorAdmin.cs</DependentUpon>
@@ -258,6 +259,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ImagenPerfilPorDefecto.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
